--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
   
     
   <!--  <div class="site-blocks-cover overlay" style="background-image: url(images/hero_1.jpg);" data-aos="fade" id="home-section"> -->
-    <div class="site-blocks-cover " style="background-image: url(images/hero_1.jpg);"  id="home-section">
+    <div class="site-blocks-cover " style="background-image: url(images/canvas.png);"  id="home-section">
 
       <div class="container">
         <div class="row align-items-center justify-content-center">
