--- a/index.html
+++ b/index.html
@@ -40,13 +40,13 @@
                     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                         <ul class="nav navbar-nav main-nav  clear navbar-right ">
                             <li><a class="navactive color_animation" href="#top">Beranda</a></li>
-                            <li><a class="color_animation" href="#aboutus">Operasional</a></li>
+                            <li><a class="color_animation" href="#aboutus">Tentang Kami</a></li>
                             <li><a class="color_animation" href="#thefood">Makanan</a></li>
                             <li><a class="color_animation" href="#thecoffee">Coffee</a></li>
-                            <li><a class="color_animation" href="#theplace">Wireless Space</a></li>
+                            <li><a class="color_animation" href="#theplace">Wireless</a></li>
                         
 <!--                             <li><a class="color_animation" href="#featured">FEATURED</a></li> -->
-                            <li><a class="color_animation" href="#orderhere">Order Here!</a></li>
+                            <li><a class="color_animation" href="#orderhere">PESAN DISINI!</a></li>
                         </ul>
                     </div><!-- /.navbar-collapse -->
                 </div>
@@ -56,8 +56,8 @@
         <div id="top" class="starter_container bg">
             <div class="follow_container">
                 <div class="col-md-6 col-md-offset-3">
-                    <h2 class="top-title"><br></h2>
-                    <h2 class="white second-title">Jl. K.H Asy'ari RT 01 RW 02 Mojotengah Wonosobo Jawa Tengah 56351</h2>
+                    <h2 class="top-title"><br></h2><br>
+                    <h3 class="white second-title">Jl. K.H Asy'ari RT 01 RW 02 Mojotengah Wonosobo Jawa Tengah 56351</h3>
 
                     <hr>
 <!--                      <div class="col-md-6">
@@ -76,23 +76,21 @@
         <section id="aboutus" class="description_content">
             <div class="text-content container">
                 <div class="col-md-6">
-                    <h1>Jam Buka</h1>
-                    <div class="icon-coffee-mug-heart fa-2x"></div>
-                    <h2 class="desc-text">Senin - Jumat : 12:00-21:00</h2>
+                    <h1>Tentang Kami</h1>
+                    <!--<div class="icon-coffee-mug-heart fa-2x"></div>-->
+                    <p class="desc-text"> de Warkit Food & Beverage adalah kedai makanan yang beralamat di sekitar Pondok Pesantren Al Asy'ariyyah. Berdiri sejak 1990-an hingga 2008 dan kembali buka pada akhir agustus 2020.</p>
 <br>
-                    <h2 class="desc-text">Sabtu       : 12:00-24:00</h2>
-<br>
-                    <h2 class="desc-text">Minggu      : 07:00-21:00</h2>
+                    <h2 class="desc-text">Setiap hari pukul 09:00 WIB - 18:00 WIB</h2>
 <br>                
-                    <p class="desc-text"> *Minggu hanya untuk Wifi Corner saja</p>
+                    <p class="desc-text"><i> *Tutup ketika pesanan overload</i></p>
                 </div>
                 <div class="col-md-6">
                     <div class="img-section">
-                       <img src="images/jambuka1.jpg" width="220" height="250">
-                       <img src="images/jambuka2.jpg" width="220" height="250">
+                       <img src="images/ph1.jpg" width="235" height="235">
+                       <img src="images/ph2.jpg" width="235" height="235">
                        <div class="img-section-space"></div>
-                       <img src="images/jambuka3.jpg"  width="220" height="250">
-                       <img src="images/jambuka4.jpg"  width="220" height="250">
+                       <img src="images/ph4.jpg" width="235" height="235">
+                       <img src="images/ph3.jpg" width="235" height="235">
                    </div>
                 </div>
             </div>
@@ -111,7 +109,7 @@
                 <div class="col-md-6">
                     <h1>MENU MAKANAN</h1>
                     <div class="icon-chef-hat fa-2x"></div>
-                    <p class="desc-text text-center">Each and Every item on the food-menu is designed to compliment the coffee so that you can enjoy every sip of it.</p>
+                    <p class="desc-text text-center">Kami menyediakan berbagai menu makanan seperti ayam geprek, rica-rica, mie, nasi, cemilan dan masih banyak lagi.</p>
                 </div>
                 <div class="col-md-6">
                     <img src="images/menu1.jpg" width="260" alt="Bread">
@@ -139,7 +137,7 @@
                 <div class="col-md-6 col-md-offset-1">
                     <h1>COFFEE</h1>
                     <div class="icon-coffee-mug fa-2x"></div>
-                    <p class="desc-text text-center">Tersedia berbagai macam jenis kopi.</p>
+                    <p class="desc-text text-center">Coming Soon, as soon as possible.</p>
                 </div>
             </div>
           <!--   <div class="text-content container"> 
@@ -193,19 +191,19 @@
         <section id ="theplace" class="description_content">
             <div  class="beer background_content">
                 <br>
-                <h1><span>Wireless</span> Space</h1>
+                <h1><span>FULL SPEED</span> WIFI</h1>
             </div>
             <div class="text-content container"> 
                 <div class="col-md-5">
                    <div class="img-section">
-                       <img src="images/background_internet.jpg" width="100%">
+                       <img src="images/fswifi.jpg" width="100%">
                    </div>
                 </div>
                 <br>
                 <div class="col-md-6 col-md-offset-1">
                     <h1>Internet</h1>
-                    <div class="icon-latte fa-2x"></div>
-                    <p class="desc-text">Wireless Space dengan bandwidth up to 100Mbps !</p>
+                    <div class="icon-network fa-2x"></div>
+                    <p class="desc-text">Free Wifi dengan kecepatan 2x20 Mbps yang aman stabil. Supported by Handsome Area Network</p>
                 </div>
             </div>
         </section>
@@ -217,8 +215,8 @@
         <section id="orderhere" class="social_connect">
             <div class="text-content container"> 
                 <div class="col-md-12">
-                    <span class="social_heading">Place Your Order Here!</span>
-                    <span class="social_info"><a class="color_animation" href="tel:085643647643">(+62)-85643647643</a></span>
+                    <span class="social_heading">Pesan Sekarang? Lets Go!</span>
+                    <span class="social_info"><a class="color_animation" href="https://api.whatsapp.com/send?phone=0895355191234&text=Halo%20Admin%20Saya%20Mau%20Order">0895355191234</a></span>
                 </div>
             </div>
         </section>
@@ -227,7 +225,7 @@
 
         <section id="contact">
             <div class="map">
-                <iframe src="" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d942.8190753806598!2d109.90077715102802!3d-7.32607366426982!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e7aa1207e2a574f%3A0x8d70a7f67363ee14!2sde%20Warkit%20-%20Food%20and%20Beverage!5e0!3m2!1sen!2sid!4v1604241469120!5m2!1sen!2sid" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
             </div>
         </section>
 
@@ -238,7 +236,7 @@
         <div class="footer-top"> 
            <div class="container">
               <div class="col-lg-12 col-xs-12 text-center">
-                 <a href="https://www.instagram.com/de.warkit" target="_blank"><i class="fa fa-instagram fa-2x"></i>Instagram</a>
+                 <a href="https://www.instagram.com/dewarkit" target="_blank"><i class="fa fa-instagram fa-2x"></i>Instagram</a>
              </div>
            </div> 
         </div>  
